# st_handeye_graph

./: CMakeLists.txt  Dockerfile  noxfile.py  pyproject.toml
docs/: conf.py  index.md
setup/: install_g2o.sh  install_visp.sh
src/: core.cpp  st_handeye_graph.cpp  st_handeye_visp.cpp
src/sthandeyegraphpy/: __init__.py  _core.pyi  graph_calibration.py  util.py
stubs/sthandeyegraphpy/: __init__.pyi  _core.pyi  _version.pyi
tests/: test_graph_calibration.py  test_optimization_params.py  test_package.py
